@@ -15,8 +15,60 @@ use File::Temp 'tempdir';
 use FindBin;
 use IO::Socket::INET;
 use Mojo::IOLoop;
+use Mojo::Server::Hypnotoad;
 use Mojo::UserAgent;
 use Mojo::Util qw(slurp spurt);
+
+# Configure
+{
+  local $ENV{MOJO_REVERSE_PROXY};
+  my $hypnotoad = Mojo::Server::Hypnotoad->new;
+  $hypnotoad->prefork->app->config->{myserver} = {
+    accept_interval     => 33,
+    accepts             => 13,
+    backlog             => 43,
+    clients             => 1,
+    graceful_timeout    => 23,
+    group               => 'testers',
+    heartbeat_interval  => 7,
+    heartbeat_timeout   => 9,
+    keep_alive_requests => 3,
+    inactivity_timeout  => 5,
+    listen              => ['http://*:8081'],
+    lock_file           => '/foo/bar.lock',
+    lock_timeout        => 14,
+    multi_accept        => 16,
+    pid_file            => '/foo/bar.pid',
+    proxy               => 1,
+    upgrade_timeout     => 45,
+    user                => 'tester',
+    workers             => 7
+  };
+  is $hypnotoad->upgrade_timeout, 60, 'right default';
+  $hypnotoad->configure('test');
+  is_deeply $hypnotoad->prefork->listen, ['http://*:8080'], 'right value';
+  like $hypnotoad->prefork->pid_file, qr/hypnotoad\.pid$/, 'right value';
+  $hypnotoad->configure('myserver');
+  is $hypnotoad->prefork->accept_interval,    33,        'right value';
+  is $hypnotoad->prefork->accepts,            13,        'right value';
+  is $hypnotoad->prefork->backlog,            43,        'right value';
+  is $hypnotoad->prefork->graceful_timeout,   23,        'right value';
+  is $hypnotoad->prefork->group,              'testers', 'right value';
+  is $hypnotoad->prefork->heartbeat_interval, 7,         'right value';
+  is $hypnotoad->prefork->heartbeat_timeout,  9,         'right value';
+  is $hypnotoad->prefork->inactivity_timeout, 5,         'right value';
+  is_deeply $hypnotoad->prefork->listen, ['http://*:8081'], 'right value';
+  is $hypnotoad->prefork->lock_file,    '/foo/bar.lock', 'right value';
+  is $hypnotoad->prefork->lock_timeout, 14,              'right value';
+  is $hypnotoad->prefork->max_clients,  1,               'right value';
+  is $hypnotoad->prefork->max_requests, 3,               'right value';
+  is $hypnotoad->prefork->multi_accept, 16,              'right value';
+  is $hypnotoad->prefork->pid_file,     '/foo/bar.pid',  'right value';
+  is $hypnotoad->prefork->user,         'tester',        'right value';
+  is $hypnotoad->prefork->workers,      7,               'right value';
+  ok $ENV{MOJO_REVERSE_PROXY}, 'reverse proxy enabled';
+  is $hypnotoad->upgrade_timeout, 45, 'right value';
+}
 
 # Prepare script
 my $dir = tempdir CLEANUP => 1;
